Made the mobile navigation mobile responsive and fixed elements at certian breakpoints.

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@
     --main-color: #AD2333;
     --dark-text: #4A4A4A;
 } */
+
+
+/*******************************************************************************************
+                                            Theme Styles
+*******************************************************************************************/
+
 *
 {
     margin: 0;
@@ -24,7 +30,7 @@ body
 }
 
 
-h1,h2,h3,h4,h5,h6,p
+h1,h2,h3,h4,h5,h6,p,div
 {
     color: var(--dark-text);
 }
@@ -32,6 +38,7 @@ h1,h2,h3,h4,h5,h6,p
 /*******************************************************************************************
                                             General Styles
 *******************************************************************************************/
+
 /* Page Heading  */
 .content-heading
 {
@@ -180,7 +187,7 @@ h1,h2,h3,h4,h5,h6,p
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
+    margin: 80px 0px;
     animation-delay: 0.7s;
 }
 .social-contact a
@@ -318,9 +325,15 @@ h1,h2,h3,h4,h5,h6,p
 *******************************************************************************************/
 
 
-@media only screen and (max-device-width: 1200px) 
+@media(max-device-width: 1200px) 
 {
     /* LANDING */
+
+    .landing-content h1
+    {
+        font-size: 4em;
+        letter-spacing: 4px;
+    }
 
     /* OFFICERS */
     
@@ -341,9 +354,14 @@ h1,h2,h3,h4,h5,h6,p
     
 }
 
-@media only screen and (max-device-width: 900px) 
+@media(max-device-width: 900px) 
 {
     /* LANDING */
+    .landing-content h1
+    {
+        font-size: 3.5em;
+        letter-spacing: 1px;
+    }
 
     /* CONTACT */
 
@@ -419,9 +437,15 @@ h1,h2,h3,h4,h5,h6,p
     }
 }
 
-@media only screen and (max-device-width: 700px) 
+@media(max-device-width: 700px) 
 {
     /* LANDING */
+
+    .landing-content h1
+    {
+        font-size: 2.6em;
+        letter-spacing: 0px;
+    }
 
     /* CONTACT */
     .contact-content
@@ -523,10 +547,15 @@ h1,h2,h3,h4,h5,h6,p
 
 }
 
-@media only screen and (max-device-width: 500px) 
+@media(max-device-width: 500px) 
 {
 
     /* LANDING */
+
+    .landing-content h1
+    {
+        font-size: 1.72em;
+    }
 
     /* CONTACT */
 
